Use own cdp fork

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -77,7 +77,7 @@ if [[ -d "$HOME/.local/share/chezmoi/antigen" ]]; then
 
     # Bundles from https://github.com/robbyrussell/oh-my-zsh/tree/master/plugins
     antigen bundle branch    # Displays the current Git or Mercurial branch fast.
-    antigen bundle zerok/cdp # quick project directory change
+    antigen bundle fgrosse/cdp # quick project directory change
     antigen bundle zsh-users/zsh-syntax-highlighting # Syntax highlighting in the shell
     antigen bundle docker # autocomplete options for all docker commands.
     antigen bundle golang # autocompletion for go
