--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -72,41 +72,61 @@ unsetopt beep notify
 if [[ -d "$HOME/.local/share/chezmoi/antigen" ]]; then
     source "$HOME/.local/share/chezmoi/antigen/antigen.zsh"
 
-    # Load the oh-my-zsh's library.
+    # Load the oh-my-zsh's library (required for theme).
     antigen use oh-my-zsh
 
     # Bundles from https://github.com/robbyrussell/oh-my-zsh/tree/master/plugins
-    antigen bundle branch    # Displays the current Git or Mercurial branch fast.
     antigen bundle fgrosse/cdp # quick project directory change
-    antigen bundle zsh-users/zsh-syntax-highlighting # Syntax highlighting in the shell
     antigen bundle docker # autocomplete options for all docker commands.
-    antigen bundle golang # autocompletion for go
     antigen bundle httpie # auto completion for httpie
-    antigen bundle gpg-agent
-    antigen bundle kubectl
 
     # Load the theme.
     antigen theme "$HOME/.local/share/chezmoi/theme/" fgrosse
+
+    # Some more styling of the shell
+    antigen bundle zsh-users/zsh-autosuggestions     # Fish like suggestions
+    antigen bundle zsh-users/zsh-syntax-highlighting # Syntax highlighting in the shell
 
     # Tell antigen that you're done.
     antigen apply
 fi
 
-# direnv
-type direnv >/dev/null 2>&1 && eval "$(direnv hook zsh)"
+# enable kubectl auto completion
+if [[ -x "$(which kubectl 2> /dev/null)" ]]; then
+    source <(kubectl completion zsh)
+fi
+
+# enable direnv hook
+if [[ -x "$(which direnv 2> /dev/null)" ]]; then
+    source <(direnv hook zsh)
+fi
+
+# Some default flags configured via aliases
+alias grep='grep --color'
+alias ls='ls --color -h'
 
 # Define my aliases
 alias please='sudo'
 alias gpu='git pu'
 alias ts='tig status'
 alias coma='git commit --amend'
-alias l='ls -l'
 alias ll='l -L'
 alias la='l -a'
+alias kc=kubectl
+alias gpg=gpg2
 
-# Some default flags configured via aliases
-alias grep='grep --color'
-alias ls='ls --color -h'
+# https://github.com/sharkdp/bat
+if [[ -x "$(which bat 2> /dev/null)" ]]; then
+    alias cat='bat --style=plain'
+fi
+
+if [[ -x "$(which cwtch 2> /dev/null)" ]]; then
+    alias watch=cwtch
+fi
+
+if [[ -x "$(which tldr 2> /dev/null)" ]]; then
+    alias help=tldr
+fi
 
 # A function to allow traversing up the file system using multiple dots (e.g. ....)
 cd() {
@@ -122,6 +142,6 @@ cd() {
 # Find and delete merged branches in a git repository.
 git-delete-merged-branches() {
     git branch --merged | \
-    grep -v master | \
+    grep -v -E '(master|develop)' \
     xargs git branch -d
 }
