--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -81,15 +81,14 @@ fi
 
 # Some default flags configured via aliases
 alias grep='grep --color'
-alias ls='ls --color -h'
 
 # Define my aliases
 alias please='sudo'
 alias gpu='git pu'
 alias ts='tig status'
 alias coma='git commit --amend'
-alias ll='ls -lL'
-alias la='ls -la'
+alias ll='ls -lL --color -h'
+alias la='ll -a'
 alias kc=kubectl
 alias gpg=gpg2
 
