--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -69,7 +69,7 @@ unsetopt beep notify
 source "$HOME/.zsh_plugins.sh"
 
 # Load my own completions
-fpath+=( "/home/fgrosse/.local/share/chezmoi/completions" )
+fpath+=( "$HOME/.local/share/chezmoi/completions" )
 
 # init autocompletion
 autoload compinit && compinit
@@ -103,6 +103,10 @@ fi
 
 if [[ -x "$(which tldr 2> /dev/null)" ]]; then
     alias help=tldr
+fi
+
+if [[ -x "$(which fzf 2> /dev/null)" ]]; then
+    source "$HOME/.local/share/chezmoi/fzf/shell/key-bindings.zsh"
 fi
 
 # A function to allow traversing up the file system using multiple dots (e.g. ....)
