Change ll alias to display links better

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -87,7 +87,7 @@ alias please='sudo'
 alias gpu='git pu'
 alias ts='tig status'
 alias coma='git commit --amend'
-alias ll='ls -lL --color -h'
+alias ll='ls -l --color -h'
 alias la='ll -a'
 alias kc=kubectl
 alias gpg=gpg2
