Add alias for kafkactl

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -78,6 +78,7 @@ alias coma='git commit --amend'
 alias ll='ls -l --color -h'
 alias la='ll -a'
 alias kc=kubectl
+alias ka=kafkactl
 alias gpg=gpg2
 
 # https://github.com/sharkdp/bat
