--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -94,6 +94,10 @@ if [[ -x "$(which tldr 2> /dev/null)" ]]; then
     alias help=tldr
 fi
 
+if [[ -x "$(which gron 2> /dev/null)" ]]; then
+    alias ungron='gron --ungron'
+fi
+
 if [[ -x "$(which fzf 2> /dev/null)" ]]; then
     # Extra zfz key bindings
     source "$HOME/.local/share/chezmoi/fzf/shell/key-bindings.zsh"
