--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -98,6 +98,10 @@ if [[ -x "$(which gron 2> /dev/null)" ]]; then
     alias ungron='gron --ungron'
 fi
 
+if [[ -x "$(which prettyping 2> /dev/null)" ]]; then
+    alias ping='prettyping --nolegend'
+fi
+
 if [[ -x "$(which fzf 2> /dev/null)" ]]; then
     # Extra zfz key bindings
     source "$HOME/.local/share/chezmoi/fzf/shell/key-bindings.zsh"
