Update .gitconfig template

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -32,8 +32,8 @@
     {{- if (index . "signingkey") }}
     signingkey = {{ .signingkey }}
 
-[gpg]
-    program = /usr/bin/gpg2
+[commit]
+    gpgsign = true
 {{- end }}
 
 [init]
