--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -13,6 +13,9 @@
     # I got this from http://codingkilledthecat.wordpress.com/2012/04/27/git-stash-pop-considered-harmful/
     save = !sh -c 'export PREV=$(git symbolic-ref HEAD|cut -d/ -f3-) && git checkout -b "$1" && git commit -am "$1" && git checkout "$PREV"'
 
+[advice]
+    detachedHead = false
+
 [branch]
     autosetuprebase = always
 
