Add support for macOS in git config

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -39,6 +39,11 @@
     gpgSign = true
 {{- end }}
 
+{{ if eq .chezmoi.os "darwin" -}}
+[credential]
+    helper = osxkeychain
+{{- end }}
+
 [init]
     defaultBranch = main
 
